tests/errors/illegal_require_and_extend.err
lexer error: required file is not available
 ==> ./tests/errors/illegal_require_and_extend.tau:2:5
2 |    require "test1.tau";
  |    ^^^^^^^^^^^^^^^^^^^ required here

resolver error: extend in non required file
 ==> ./tests/errors/illegal_require_and_extend.tau:4:1
4 |extend m{
  |^^^^^^^^ the file containing this has not been required by module m
